<resources>
    <string name="app_name">Atomyk Play</string>
    <string name="song_name_e">Song</string>
    <string name="empty">empty</string>
    <string name="song_artist_e">Artist</string>
    <string name="nothing_to_show">Nothing to see here.</string>
    <string name="search">Search</string>
    <string name="search_here">Search here</string>
    <string name="song_dur_e">Duration</string>
    <string name="extension">EXT</string>
    <string name="bitrate">BITRATE</string>
    <string name="big_dot">•</string>
    <string name="your_lyrics">Paste Here Your Lyrics …</string>
    <string name="imageView">"Music cover image"</string>
    <string name="start_pos">00:00</string>
    <string name="song">0 Song</string>
    <string name="album">Album</string>
    <string name="artist">Artist</string>
    <string name="genre">Genre</string>
    <string name="start_text">Start</string>
    <string name="sleep_timer_text">Set sleep timer</string>
    <string name="filter_duration">Filter duration</string>
    <string name="song0">0 Songs</string>
    <string name="save">Save</string>
    <string name="find">Find</string>
    <string name="no_lyrics_found">No embedded lyrics found</string>
    <string name="add_lyrics"><u>Add lyrics</u></string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="search_lyrics">Search Lyrics</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="donate">Donate</string>
    <string name="drawer_toggle_open">drawer_open</string>
    <string name="drawer_toggle_close">drawer_close</string>
    <string name="dark_mode_tv">Dark Mode</string>
    <string name="light_mode_tv">Light Mode</string>
    <string name="home">Home</string>
    <string name="default_mode_tv">Default Mode</string>
    <string name="theme_amp_colors">Themes</string>
    <string name="player_info">Player</string>
    <string name="ShowArtistInMini">Artist</string>
    <string name="ShowArtistInMiniDes">Display artist name in mini player.</string>
    <string name="show_song_info">Song Info</string>
    <string name="info_des">Display format and bitrate in main player.</string>
    <string name="show_option_menu">Option Menu</string>
    <string name="option_des">Display option menu in main player.</string>
    <string name="audio">Audio</string>
    <string name="auto_play">Auto Play</string>
    <string name="enhance_audio">Enhance Audio</string>
    <string name="autoplay_des">Wired AutoPlay: Play on device connect. (Music starts with app)</string>
    <string name="autoplayBt_des">Bluetooth AutoPlay: Play on device connect. (Music starts with app)</string>
    <string name="keep_shuffle_on">Keep Shuffle</string>
    <string name="shuffle_des">Shuffle remains during new song selection.</string>
    <string name="lowerVol">Lower Volume</string>
    <string name="vol_des">Reduce volume for system sounds.</string>
    <string name="filter">Filter</string>
    <string name="blacklist">Blacklist</string>
    <string name="blacklist_des">Ignore scanning blacklisted folders.</string>
    <string name="filter_by_dur">Filter By Duration</string>
    <string name="fil_dur_des">Filter out short-duration songs.</string>
    <string name="show_extra_con">Extra Controls</string>
    <string name="ext_con_des">Add forward button in the mini player</string>
    <string name="self_break">Self Break</string>
    <string name="self_stop_des">Idle for 5 minutes: Music service stops.\n(When music\'s not playing)</string>
    <string name="set_as_ringtone">Set as ringtone</string>
    <string name="delete">Delete from device</string>
    <string name="add_queue">Add to queue</string>
    <string name="play_next">Play next</string>
    <string name="keep_scr">Keep Screen On</string>
    <string name="keep_scr_des">Keep screen on while lyrics open \n(Battery consumption might increase)</string>
    <string name="details">Details</string>
    <string name="share">Share</string>
    <string name="tag">Tag editor</string>
    <string name="favorite">Favorites</string>
    <string name="playLists">Playlists</string>
    <string name="playList">Playlist</string>
    <string name="help">Help ?</string>
    <string name="one_click">Skip back</string>
    <string name="one_click_des">One-click to skip back.</string>
    <string name="search_here_song">Search your song</string>
    <string name="shuffle_play">Shuffle</string>
    <string name="last_added">Last added</string>
    <string name="add_playlist">Add to playlist</string>
    <string name="cnp">Create new playlist</string>
    <string name="add_fav">Favorites</string>
    <string name="choose_pl">Choose a playlist</string>
    <string name="create_pl">Create playlist</string>
    <string name="pl_name">Playlist name</string>
    <string name="cci">Choose a cover image</string>
    <string name="delete_pl">Delete playlist</string>
    <string name="choose_pl_cover">Choose artwork</string>
    <string name="rename">Rename</string>
    <string name="rename_pl">Rename playlist</string>
    <string name="remove">Remove from list</string>
    <string name="blacklisted_items">BlackListed Folders</string>
    <string name="blacklist_fol">Blacklist folders</string>
    <string name="last_added_interval">Last added interval</string>
    <string name="file_path">File path</string>
    <string name="file_name">Song name</string>
    <string name="file_size">File size</string>
    <string name="file_bit">Bitrate</string>
    <string name="file_length">Duration</string>
    <string name="file_artist">Artist name</string>
    <string name="file_genre">Genre</string>
    <string name="song_name">Song name</string>
    <string name="song_artist_name">Artist name</string>
    <string name="file_album">Album</string>
    <string name="developers_info">Developers info</string>
    <string name="app_info">App info</string>
    <string name="copyright_text">Copyright © 2023 Atomyk Music.All Rights Reserved</string>
    <string name="open_src"><u>Open source license</u></string>
    <string name="what_we_collect">Our data collection is limited to application crash reports only, with no user data involved.</string>
    <string name="changelog"><u>Changelog</u></string>
    <string name="rate_us"><u>Rate us on play store</u></string>
    <string name="open_source">All platforms offer open-source content accessible to everyone.</string>
    <string name="lottie"><u>Lottie files</u></string>
    <string name="flat_icon"><u>Flat Icons</u></string>
    <string name="svg_repo"><u>SVG Repo</u></string>
    <string name="add_lyr">Add lyrics</string>
    <string name="permission_req">Permission Required</string>
    <string name="permission_des">These permissions are essential for the app\'s functionality.</string>
    <string name="read_per"><b>Read External Storage -</b> In order to scan songs from your device, app needs to request this permission.</string>
    <string name="phone_state_per"><b>Read Phone State -</b> In order to provide better experience while receiving phone calls, app needs to request this permission.</string>
    <string name="delete_file">Delete this file</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="beautify_songs">Beautify Song Name</string>
    <string name="beautify_des">Remove unnecessary symbols from name \n(Ex - &amp;#039;, %20, _, etc.)</string>
    <string name="scan_all_files">Scan All Files</string>
    <string name="scan_all_des">The app will scan all audio files, including music, ringtones, recordings (including call recordings), and more.</string>
    <string name="add_tag_removal">Add Tags To Remove</string>
    <string name="add_tag">Add Tag</string>
    <string name="tag_name">Replace this</string>
    <string name="tag_suggestion">Tags for removal should exactly match, including spaces.</string>
    <string name="replacing_tag">Replace with</string>
    <string name="abhinav_des"><![CDATA[I take immense pride in my involvement with this project, a harmonious convergence of my fervor for both music and technology. The result is an application poised to imbue users with joy and entertainment for years to come. I extend my heartfelt gratitude to you for choosing this app. As a friendly reminder, I encourage you to share this remarkable player with your acquaintances as well. Additionally, I\'m delighted to acknowledge the invaluable contributions of my esteemed friend Akash Goyal, who played a pivotal role in crafting some of the app\'s vital functions.]]></string>
    <string name="year">Year</string>
    <string name="lyric_artist_hint">Artist Ex- Alan Walker, Justin Bieber, etc.</string>
    <string name="lyric_song_hint">Song Ex- Faded, Let me love you, etc.</string>
    <string name="album_artist">Album artist</string>
    <string name="hide_sb_des">Hide notification status bar from top</string>
    <string name="hide_sb">Hide Status Bar</string>
    <string name="hide_nb_des">"Hide navigation bar from bottom "</string>
    <string name="hide_nb">Hide Navigation Bar</string>
    <string name="info_for_lyrics">In case of no results, kindly attempt the search without specifying the artist\'s name. Please be aware that we do not utilize any paid lyric retrieval service. Thus, for certain tracks, lyrics might not be available. Should you wish to manually input lyrics, kindly visit the <i><b>https://www.megalobiz.com</b></i> website. There, you can search for your desired song, click on it, press the copy button, and subsequently paste it here.</string>
    <string name="bass_lvl">Bass Level</string>
    <string name="vir_strgnth">Virtualizer Strength</string>
    <string name="enhance_des"><![CDATA[Add some bass & virtualization, make it more enjoyable.(Beta Feature)]]></string>
    <string name="something_went_wrong">Something went wrong</string>
</resources>