<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/navigation_setting"
            android:icon="@drawable/settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/navigation_about"
            android:icon="@drawable/about"
            android:title="@string/about" />

    </group>
    <item
        android:id="@+id/navigation_donate"
        android:icon="@drawable/heart_with_mouse"
        android:title="@string/donate" />
</menu>