<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_bg"
    android:clickable="true"
    android:focusable="true"
    tools:context=".function.SearchResultsFragment">


    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/song_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:text="@string/song"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/album_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:text="@string/album"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/artist_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:text="@string/artist"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/genre_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:text="@string/genre"
            android:textSize="16sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/searched_song_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radio_group"
        android:layout_alignParentEnd="true"
        android:layout_margin="12dp"
        android:padding="4dp"
        android:textSize="@dimen/d_16sp"
        android:text="@string/song0"
        android:textColor="@color/sub_text_grey" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/searched_song_num" />

</RelativeLayout>