<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_bg"
        android:orientation="vertical"
        android:paddingTop="90dp"
        android:paddingBottom="90dp"
        tools:context=".fragments.SettingsFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:background="@color/secondary_bg"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:paddingHorizontal="16dp"
                android:text="@string/theme_amp_colors"
                android:textColor="@color/text_color"
                android:textSize="@dimen/d_32sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radio_group_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/default_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/left_selector"
                    android:button="@android:color/transparent"
                    android:paddingHorizontal="15dp"
                    android:text="@string/default_mode_tv"
                    android:textColor="@color/text_theme_state"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/dark_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/middle_selector"
                    android:button="@android:color/transparent"
                    android:paddingHorizontal="15dp"
                    android:text="@string/dark_mode_tv"
                    android:textColor="@color/text_theme_state"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/light_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/right_selector"
                    android:button="@android:color/transparent"
                    android:paddingHorizontal="15dp"
                    android:text="@string/light_mode_tv"
                    android:textColor="@color/text_theme_state"
                    android:textSize="16sp" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:background="@color/secondary_bg"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:paddingHorizontal="16dp"
                android:text="@string/player_info"
                android:textColor="@color/text_color"
                android:textSize="@dimen/d_32sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp"
                android:weightSum="6">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:paddingVertical="4dp"
                        android:text="@string/show_song_info"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/d_18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:paddingStart="2dp"
                        android:paddingEnd="16dp"
                        android:text="@string/info_des"
                        android:textColor="@color/sub_text_grey"
                        android:textSize="@dimen/d_15sp" />

                </LinearLayout>

                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:checked="true"
                    android:gravity="center"
                    android:thumb="@drawable/custom_switch_thumb"
                    app:track="@drawable/custom_track_switch" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp"
                android:weightSum="6">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:paddingVertical="4dp"
                        android:text="@string/ShowArtistInMini"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/d_18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:paddingStart="2dp"
                        android:paddingEnd="16dp"
                        android:text="@string/ShowArtistInMiniDes"
                        android:textColor="@color/sub_text_grey"
                        android:textSize="@dimen/d_15sp" />

                </LinearLayout>

                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:thumb="@drawable/custom_switch_thumb"
                    app:track="@drawable/custom_track_switch" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp"
                android:weightSum="6">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:paddingVertical="4dp"
                        android:text="@string/show_option_menu"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/d_18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:paddingStart="2dp"
                        android:paddingEnd="16dp"
                        android:text="@string/option_des"
                        android:textColor="@color/sub_text_grey"
                        android:textSize="@dimen/d_15sp" />

                </LinearLayout>

                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:thumb="@drawable/custom_switch_thumb"
                    app:track="@drawable/custom_track_switch" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="12dp"
            android:background="@color/secondary_bg"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:paddingHorizontal="16dp"
                android:text="@string/audio"
                android:textColor="@color/text_color"
                android:textSize="@dimen/d_32sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp"
                android:weightSum="6">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:paddingVertical="4dp"
                        android:text="@string/auto_play"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/d_18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:paddingStart="2dp"
                        android:paddingEnd="16dp"
                        android:text="@string/autoplay_des"
                        android:textColor="@color/sub_text_grey"
                        android:textSize="@dimen/d_15sp" />

                </LinearLayout>

                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:thumb="@drawable/custom_switch_thumb"
                    app:track="@drawable/custom_track_switch" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp"
                android:weightSum="6">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:paddingVertical="4dp"
                        android:text="@string/keep_shuffle_on"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/d_18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:paddingStart="2dp"
                        android:paddingEnd="16dp"
                        android:text="@string/shuffle_des"
                        android:textColor="@color/sub_text_grey"
                        android:textSize="@dimen/d_15sp" />

                </LinearLayout>

                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:thumb="@drawable/custom_switch_thumb"
                    app:track="@drawable/custom_track_switch" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp"
                android:weightSum="6">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:paddingVertical="4dp"
                        android:text="@string/lowerVol"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/d_18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:paddingStart="2dp"
                        android:paddingEnd="16dp"
                        android:text="@string/vol_des"
                        android:textColor="@color/sub_text_grey"
                        android:textSize="@dimen/d_15sp" />

                </LinearLayout>

                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:thumb="@drawable/custom_switch_thumb"
                    app:track="@drawable/custom_track_switch" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
